# freepass

./: .gitmodules  README.md
capi/: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml
ios/Freepass/Freepass.xcodeproj/: project.pbxproj
