[package]
name = "freepass-core"
version = "0.0.0"
authors = [ "Val Packett <val@packett.cool>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "Freepass password/auth manager: core library"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/valpackett/freepass-core"
repository = "https://github.com/valpackett/freepass-core"
documentation = "https://myfreeweb.github.io/autodocs/freepass-core/freepass-core"

[lib]
name = "freepass"

[dependencies]
chrono = { version = "0", features = ["rustc-serialize"] }
secstr = { version = "0", path = "../../secstr", features = ["cbor-serialize"] }
libsodium-sys = "0"
sodiumoxide = "0"
rusterpassword = "0"
libc = "0.2"
cbor = "0"
rustc-serialize = "0"
